--- a/index.html
+++ b/index.html
@@ -1,5 +1,21 @@
-<h1> hello </h1>
-<script>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width">
+
+    <title>webprog ilog 2018</title>
+    </head>
+
+  <body>
+    <h1>hello!</h1>
+
+    <section></section>
+
+ //   <script src="image-list.js"></script>
+ //  <script src="app.js"></script>
+    <script>
   if ('serviceWorker' in navigator) {
     window.addEventListener('load', function () {
         navigator.serviceWorker.register('/sw.js', {scope: '/'})
@@ -15,4 +31,6 @@
             });
     });
 }
-</script>
+</script>  
+  </body>
+</html>
