--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
        <input type="submit" value="Submit" />
       </form>
     </section>
+    <script src="app.js"></script>
     <script>
   if ('serviceWorker' in navigator) {
     window.addEventListener('load', function () {
