--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <section>
       <h1>please input the coordinate to memorise:</h1>
       <form action="form_action.asp" method="get">
-          Longitude: <input type="text" name="longitude" />
-          Latitude: <input type="text" name="latitude" />
+          Longitude: <input type="text" id="longti" name="longitude" />
+          Latitude: <input type="text" id="lati" name="latitude" />
        <input type="submit" value="Submit" />
       </form>
     </section>
