--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     </head>
 
   <body>
-    <h2>hello!</h2>
+    <h1>hello!</h1>
     <section>
-      <h1>please input the coordinate to memorise:</h1>
+      <h2>please input the coordinate to memorise:</h2>
       <form action="form_action.asp" method="get">
-          Longitude: <input type="text" id="longti" name="longitude" />
-          Latitude: <input type="text" id="lati" name="latitude" />
-       <input type="submit" value="Submit" />
+          Longitude: <input type="text" id="longti" name="longitude" /><br>
+          Latitude: <input type="text" id="lati" name="latitude" /><br>
+       <input type="submit" value="Submit" /><br>
       </form>
     </section>
     <script src="app.js"></script>
