--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <form action="form_action.asp" method="get">
           Longitude: <input type="text" id="longti" name="longitude" /><br>
           Latitude: <input type="text" id="lati" name="latitude" /><br>
-       <input type="submit" value="Submit" /><br>
+       <input type="button" name="button" value="Save" onclick="getInput()" /><br>
       </form>
     </section>
     <script src="app.js"></script>
