--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
           Longitude: <input type="text" id="longti" name="longitude" /><br>
           Latitude: <input type="text" id="lati" name="latitude" /><br>
        <input type="button" name="button" value="Save" onclick="getInput()" /><br>
+       <input type="button" name="GeoBtn" value="get geo-location" onclick="getLocation()" /><br>
       </form>
     </section>
     <script src="app.js"></script>
