--- a/index.html
+++ b/index.html
@@ -1,23 +1,59 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+<HTML>
+<HEAD>
+	<meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width">
-    <title>webprog ilog 2018</title>
-    </head>
-
-  <body>
-    <h1>hello!</h1>
-    <section>
-      <h2>please input the coordinate to memorise:</h2>
-      <form action="form_action.asp" method="get">
-          Longitude: <input type="text" id="longti" name="longitude" /><br>
-          Latitude: <input type="text" id="lati" name="latitude" /><br>
-       <input type="button" name="button" value="Save" onclick="getInput()" /><br>
-       <input type="button" name="GeoBtn" value="get geo-location" onclick="getLocation()" /><br>
-      </form>
-    </section>
-    <script src="app.js"></script>
-  </body>
-</html>
+	<Title>Geolocalisation offline</Title>
+</HEAD>
+<!--importer les formats CSS-->
+<link rel="styles.css" type="text/css" href="styles.css">
+<BODY>
+Solution de Geolocalisation<br>
+Chargée en mode <i id='connection'>offline</i><br>
+Worker <i id='worker'>non activé</i><br><br>
+<!--afficher la position GPS-->
+Ma Position GPS
+<table id='tablePosition'>
+	<tr>
+		<th>Latitude</th>
+		<th>Longitude</th>
+		<th>Précision</th>
+		<th>Dernière mise à jour</th>
+		  <!-- <p id="para">Some text here</p> -->
+		<th><button onclick="refreshGPS();">Mettre à jour</button></th>
+	</tr>
+	<tr>
+		<td id='latitude'></td>
+		<td id='longitude'></td>
+		<td id='precision'></td>
+		<td id='miseAjour'></td>
+		<td></td>
+	</tr>
+</table><br>
+<a href="data:application/octet-stream;charset=utf-16le;base64,//5mAG8AbwAgAGIAYQByAAoA">text file</a>
+<button onclick='telecharger()'>Telecharger les coordonnees sous forme de fichier texte</button><br><br>
+<!--boutons pour partager la connection avec sms et email-->
+Partager ma position
+<table>
+	<tr>
+		<th>Destinataire</th>
+		<th>Envoyer un...<th>
+	</tr>
+	<tr>
+		<td><input id='destEmail' type='text' maxlength=30></td>
+		<td><button onclick="email();">Email</td>
+	</tr>
+	<tr>
+		<td><input id='destSMS' type='number' maxlength=13></td>
+		<td><button onclick="sms();">SMS</td>
+	</tr>
+	<tr>
+		<td></td>
+		<td><button onclick="facebook();">Facebook</td>
+	</tr>
+</table>
+</BODY>
+</HTML>
+<!--concentre toutes les fonctions de traitement-->
+<script src="./traitement.js" type="text/javascript"></script>
